examples/test/testpolicy3376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3376
  namespace: namespace461
spec:
  podSelector:
    matchLabels:
      key6: value7
      key39: value47
      key35: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
          key28: value48
      podSelector:
        matchLabels:
          key32: value14
          key18: value30
          key45: value21
